Update composer.json name and add Composer installation instructions

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zefbrito/whatsapp",
+    "name": "zefbrito/magento2-whatsapp",
     "description": "WhatsApp Chat Module for Magento 2",
     "type": "magento2-module",
     "version": "1.0.0",
